--- a/app/src/main/res/layout/edit_contact_dialog.xml
+++ b/app/src/main/res/layout/edit_contact_dialog.xml
@@ -28,6 +28,7 @@
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:drawablePadding="10dp"
                 android:hint="Ism"
+                android:inputType="textPersonName"
                 android:padding="10dp"
                 android:paddingStart="20dp"
                 android:textColor="@color/white"
@@ -44,6 +45,7 @@
                 android:drawableLeft="@drawable/ic_baseline_phone_24"
                 android:drawablePadding="10dp"
                 android:hint="Telefon"
+                android:inputType="phone"
                 android:padding="10dp"
                 android:paddingStart="20dp"
                 android:textColor="@color/white"
@@ -60,6 +62,7 @@
                 android:drawableLeft="@drawable/ic_baseline_email_24"
                 android:drawablePadding="10dp"
                 android:hint="E-pochta"
+                android:inputType="textEmailAddress"
                 android:padding="10dp"
                 android:paddingStart="20dp"
                 android:textColor="@color/white"
