--- a/app/src/main/res/layout/add_contact_dialog.xml
+++ b/app/src/main/res/layout/add_contact_dialog.xml
@@ -7,9 +7,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="#171717"
         android:padding="10dp"
         app:cardCornerRadius="15dp"
-        android:backgroundTint="#171717"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
@@ -18,7 +18,6 @@
             android:orientation="vertical">
 
             <EditText
-                android:textColor="@color/white"
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -26,15 +25,16 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/edit_background"
-                android:hint="Ism"
-                android:textColorHint="#80FFFFFF"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
                 android:drawablePadding="10dp"
+                android:hint="Ism"
+                android:inputType="textPersonName"
+                android:padding="10dp"
                 android:paddingStart="20dp"
-                android:padding="10dp" />
+                android:textColor="@color/white"
+                android:textColorHint="#80FFFFFF" />
 
             <EditText
-                android:textColor="@color/white"
                 android:id="@+id/number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -42,15 +42,16 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/edit_background"
-                android:hint="Telefon"
-                android:textColorHint="#80FFFFFF"
                 android:drawableLeft="@drawable/ic_baseline_phone_24"
                 android:drawablePadding="10dp"
+                android:hint="Telefon"
+                android:inputType="phone"
+                android:padding="10dp"
                 android:paddingStart="20dp"
-                android:padding="10dp" />
+                android:textColor="@color/white"
+                android:textColorHint="#80FFFFFF" />
 
             <EditText
-                android:textColor="@color/white"
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -58,12 +59,14 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/edit_background"
-                android:hint="E-pochta"
-                android:textColorHint="#80FFFFFF"
                 android:drawableLeft="@drawable/ic_baseline_email_24"
                 android:drawablePadding="10dp"
+                android:hint="E-pochta"
+                android:inputType="textEmailAddress"
+                android:padding="10dp"
                 android:paddingStart="20dp"
-                android:padding="10dp" />
+                android:textColor="@color/white"
+                android:textColorHint="#80FFFFFF" />
 
             <LinearLayout
                 android:layout_width="match_parent"
